# pngmetagrep

./: Cargo.toml  README.md  dist-workspace.toml
crates/pngmeta/: Cargo.toml  README.md
crates/pngmeta/benches/: match_strategy.rs
crates/pngmeta/src/: lib.rs  read.rs  test_util.rs  write.rs
crates/pngmetagrep-cli/: Cargo.toml
crates/pngmetagrep-cli/src/: main.rs
crates/pngmetagrep-core/: Cargo.toml
crates/pngmetagrep-core/src/: chunk.rs  find.rs  lib.rs
