[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yutaka Nishimura"]
license = "MIT"
repository = "https://github.com/ynishi/pngmetagrep"
readme = "README.md"
description = "PNG tEXt metadata extractor — NDJSON output for jq pipelines"
