[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Yutaka Nishimura"]
license = "MIT"
repository = "https://github.com/ynishi/pngmetagrep"
homepage = "https://github.com/ynishi/pngmetagrep"
readme = "README.md"
description = "PNG tEXt metadata extractor — NDJSON output for jq pipelines"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
