[package]
name = "pngmeta"
description = "PNG tEXt chunk reader/writer — no image decoding, std-based binary I/O"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["png", "metadata", "text-chunk", "reader", "writer"]
categories = ["multimedia::images", "parser-implementations"]

[dependencies]
memchr = "2"
