[package]
name = "pngmetagrep"
description = "PNG tEXt metadata → NDJSON CLI — grep your image metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "pngmetagrep"
path = "src/main.rs"

[dependencies]
pngmetagrep-core = { path = "../pngmetagrep-core" }
clap = { version = "4", features = ["derive"] }
rayon = "1"
regex = "1"
walkdir = "2"
serde_json = "1"
