[package]
name = "pngmetagrep-core"
description = "PNG tEXt chunk extraction library — no image decoding, std-based binary reader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
serde_json = "1"
