[package]
name = "pngmetagrep-core"
description = "PNG tEXt chunk extraction library — no image decoding, std-based binary reader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["png", "metadata", "text-chunk", "parser", "ndjson"]
categories = ["multimedia::images", "parser-implementations"]

[dependencies]
pngmeta = { version = "0.1.3", path = "../pngmeta" }
regex = "1"
serde_json = "1"

[dev-dependencies]
pngmeta = { version = "0.1.3", path = "../pngmeta", features = ["test-util"] }
